[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/ArenaScripts/Arena01Scene.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ArenaScenes/Arena01Main.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/ArenaScenes/Arena01NavMesh.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/EnemyScripts/WaypointsHolder.gd" type="Script" id=4]
[ext_resource path="res://Scripts/EnemyScripts/EnemySpawner.gd" type="Script" id=5]
[ext_resource path="res://Scripts/ArenaScripts/EquipmentDropper.gd" type="Script" id=6]
[ext_resource path="res://OtherHolder/rm-albion/RM Albion font big.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scenes/PlayerScenes/PlayersNew/PlayerSingle.tscn" type="PackedScene" id=8]
[ext_resource path="res://Music/MusicController.gd" type="Script" id=9]
[ext_resource path="res://Music/Hiding Your Reality.ogg" type="AudioStream" id=10]
[ext_resource path="res://Music/Full On.ogg" type="AudioStream" id=11]
[ext_resource path="res://Music/Crisis.ogg" type="AudioStream" id=12]
[ext_resource path="res://Music/Curse of the Scarab.ogg" type="AudioStream" id=13]

[sub_resource type="SphereMesh" id=1]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
radius = 0.1
height = 0.2
radial_segments = 16
rings = 8
is_hemisphere = false

[sub_resource type="SpatialMaterial" id=2]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 1, 0, 0.914063, 1 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false

[sub_resource type="Environment" id=3]

background_mode = 1
background_sky_custom_fov = 0.0
background_color = Color( 0.110107, 0, 0.171875, 1 )
background_energy = 0.5
background_canvas_max_layer = 0
ambient_light_color = Color( 0.276418, 0.0686646, 0.351563, 1 )
ambient_light_energy = 0.5
ambient_light_sky_contribution = 1.0
fog_enabled = true
fog_color = Color( 0.578125, 0.124207, 0.571033, 1 )
fog_sun_color = Color( 1, 0.9, 0.7, 1 )
fog_sun_amount = 0.0
fog_depth_enabled = true
fog_depth_begin = 15.0
fog_depth_curve = 1.0
fog_transmit_enabled = false
fog_transmit_curve = 1.0
fog_height_enabled = false
fog_height_min = 0.0
fog_height_max = 100.0
fog_height_curve = 1.0
tonemap_mode = 0
tonemap_exposure = 1.0
tonemap_white = 1.0
auto_exposure_enabled = false
auto_exposure_scale = 0.4
auto_exposure_min_luma = 0.05
auto_exposure_max_luma = 8.0
auto_exposure_speed = 0.5
ss_reflections_enabled = false
ss_reflections_max_steps = 64
ss_reflections_fade_in = 0.15
ss_reflections_fade_out = 2.0
ss_reflections_depth_tolerance = 0.2
ss_reflections_roughness = true
ssao_enabled = false
ssao_radius = 1.0
ssao_intensity = 1.0
ssao_radius2 = 0.0
ssao_intensity2 = 1.0
ssao_bias = 0.01
ssao_light_affect = 0.0
ssao_color = Color( 0, 0, 0, 1 )
ssao_quality = 0
ssao_blur = 3
ssao_edge_sharpness = 4.0
dof_blur_far_enabled = false
dof_blur_far_distance = 10.0
dof_blur_far_transition = 5.0
dof_blur_far_amount = 0.1
dof_blur_far_quality = 1
dof_blur_near_enabled = false
dof_blur_near_distance = 2.0
dof_blur_near_transition = 1.0
dof_blur_near_amount = 0.1
dof_blur_near_quality = 1
glow_enabled = false
glow_levels/1 = false
glow_levels/2 = false
glow_levels/3 = true
glow_levels/4 = false
glow_levels/5 = true
glow_levels/6 = false
glow_levels/7 = false
glow_intensity = 0.8
glow_strength = 1.0
glow_bloom = 0.0
glow_blend_mode = 2
glow_hdr_threshold = 1.0
glow_hdr_scale = 2.0
glow_bicubic_upscale = false
adjustment_enabled = false
adjustment_brightness = 1.0
adjustment_contrast = 1.0
adjustment_saturation = 1.0
_sections_unfolded = [ "Ambient Light" ]

[node name="Arena01Scene" type="Spatial"]

script = ExtResource( 1 )

[node name="Arena01" parent="." index="0" instance=ExtResource( 2 )]

[node name="ArenaNav" parent="." index="1" instance=ExtResource( 3 )]

[node name="WaypointsHolder" type="Spatial" parent="ArenaNav" index="1"]

editor/display_folded = true
script = ExtResource( 4 )

[node name="Waypoint1" type="Spatial" parent="ArenaNav/WaypointsHolder" index="0"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, -75 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="ArenaNav/WaypointsHolder/Waypoint1" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 2 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint2" type="Spatial" parent="ArenaNav/WaypointsHolder" index="1"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 75 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="ArenaNav/WaypointsHolder/Waypoint2" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 2 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint3" type="Spatial" parent="ArenaNav/WaypointsHolder" index="2"]

editor/display_folded = true
transform = Transform( -4.37114e-008, 0, -1, 0, 1, 0, 1, 0, -4.37114e-008, -75, 0.75, -3.27835e-006 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="ArenaNav/WaypointsHolder/Waypoint3" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 2 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint4" type="Spatial" parent="ArenaNav/WaypointsHolder" index="3"]

editor/display_folded = true
transform = Transform( -4.37114e-008, 0, -1, 0, 1, 0, 1, 0, -4.37114e-008, 75, 0.75, 3.27835e-006 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="ArenaNav/WaypointsHolder/Waypoint4" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 2 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint5" type="Spatial" parent="ArenaNav/WaypointsHolder" index="4"]

editor/display_folded = true
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, -53.033, 0.75, 53.033 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="ArenaNav/WaypointsHolder/Waypoint5" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 2 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint6" type="Spatial" parent="ArenaNav/WaypointsHolder" index="5"]

editor/display_folded = true
transform = Transform( -0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, -53.033, 0.75, -53.033 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="ArenaNav/WaypointsHolder/Waypoint6" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 2 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint7" type="Spatial" parent="ArenaNav/WaypointsHolder" index="6"]

editor/display_folded = true
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 53.033, 0.75, -53.033 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="ArenaNav/WaypointsHolder/Waypoint7" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 2 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint8" type="Spatial" parent="ArenaNav/WaypointsHolder" index="7"]

editor/display_folded = true
transform = Transform( -0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 53.033, 0.75, 53.033 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="ArenaNav/WaypointsHolder/Waypoint8" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 2 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint9" type="Spatial" parent="ArenaNav/WaypointsHolder" index="8"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, -35 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="ArenaNav/WaypointsHolder/Waypoint9" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 2 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint10" type="Spatial" parent="ArenaNav/WaypointsHolder" index="9"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 35 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="ArenaNav/WaypointsHolder/Waypoint10" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 2 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint11" type="Spatial" parent="ArenaNav/WaypointsHolder" index="10"]

editor/display_folded = true
transform = Transform( -4.37114e-008, 0, -1, 0, 1, 0, 1, 0, -4.37114e-008, -35, 0.75, -1.5299e-006 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="ArenaNav/WaypointsHolder/Waypoint11" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 2 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint12" type="Spatial" parent="ArenaNav/WaypointsHolder" index="11"]

editor/display_folded = true
transform = Transform( -4.37114e-008, 0, -1, 0, 1, 0, 1, 0, -4.37114e-008, 35, 0.75, 1.5299e-006 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="ArenaNav/WaypointsHolder/Waypoint12" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 2 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint13" type="Spatial" parent="ArenaNav/WaypointsHolder" index="12"]

editor/display_folded = true
transform = Transform( -0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 24.7487, 0.75, 24.7487 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="ArenaNav/WaypointsHolder/Waypoint13" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 2 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint14" type="Spatial" parent="ArenaNav/WaypointsHolder" index="13"]

editor/display_folded = true
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, -24.7487, 0.75, 24.7487 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="ArenaNav/WaypointsHolder/Waypoint14" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 2 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint15" type="Spatial" parent="ArenaNav/WaypointsHolder" index="14"]

editor/display_folded = true
transform = Transform( -0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, -24.7487, 0.75, -24.7487 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="ArenaNav/WaypointsHolder/Waypoint15" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 2 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint16" type="Spatial" parent="ArenaNav/WaypointsHolder" index="15"]

editor/display_folded = true
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 24.7487, 0.75, -24.7487 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="ArenaNav/WaypointsHolder/Waypoint16" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 2 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Waypoint17" type="Spatial" parent="ArenaNav/WaypointsHolder" index="16"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="ArenaNav/WaypointsHolder/Waypoint17" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 2 )
_sections_unfolded = [ "Transform", "material" ]

[node name="EnemyHolder" type="Spatial" parent="ArenaNav" index="2"]

script = ExtResource( 5 )

[node name="EquipmentDropper" type="Spatial" parent="ArenaNav" index="4"]

script = ExtResource( 6 )

[node name="ArenaHUD" type="Control" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="WaveCounterLabel" type="Label" parent="ArenaHUD" index="0"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -51.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
text = "Waves Spawned So Far"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="WaveCountDownLabel" type="Label" parent="ArenaHUD" index="1"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -102.0
margin_bottom = -51.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
text = "Next Wave In"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="SpawnTimer1" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 40.0
one_shot = true
autostart = false

[node name="SpawnTimer2" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 30.0
one_shot = true
autostart = false

[node name="SpawnTimer3" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 20.0
one_shot = true
autostart = false

[node name="DropTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 30.0
one_shot = true
autostart = false

[node name="Player" parent="." index="7" instance=ExtResource( 8 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.02089, 0 )

[node name="RespawnPoint" type="Spatial" parent="." index="8"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.37124, 0 )
_sections_unfolded = [ "Transform" ]

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="9"]

environment = SubResource( 3 )

[node name="MusicController" type="Node" parent="." index="10"]

pause_mode = 2
editor/display_folded = true
script = ExtResource( 9 )
_sections_unfolded = [ "Pause" ]

[node name="AudioStreamHYR" type="AudioStreamPlayer" parent="MusicController" index="0"]

stream = ExtResource( 10 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "MusicBus"

[node name="AudioStreamFO" type="AudioStreamPlayer" parent="MusicController" index="1"]

stream = ExtResource( 11 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "MusicBus"

[node name="AudioStreamC" type="AudioStreamPlayer" parent="MusicController" index="2"]

stream = ExtResource( 12 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "MusicBus"

[node name="AudioStreamCotS" type="AudioStreamPlayer" parent="MusicController" index="3"]

stream = ExtResource( 13 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "MusicBus"

[connection signal="timeout" from="SpawnTimer1" to="." method="_on_SpawnTimer1_timeout"]

[connection signal="timeout" from="SpawnTimer2" to="." method="_on_SpawnTimer2_timeout"]

[connection signal="timeout" from="SpawnTimer3" to="." method="_on_SpawnTimer3_timeout"]

[connection signal="timeout" from="DropTimer" to="." method="_on_DropTimer_timeout"]

[connection signal="finished" from="MusicController/AudioStreamHYR" to="MusicController" method="_on_AudioStreamHYR_finished"]

[connection signal="finished" from="MusicController/AudioStreamFO" to="MusicController" method="_on_AudioStreamFO_finished"]

[connection signal="finished" from="MusicController/AudioStreamC" to="MusicController" method="_on_AudioStreamC_finished"]

[connection signal="finished" from="MusicController/AudioStreamCotS" to="MusicController" method="_on_AudioStreamCotS_finished"]


